# chamber

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CROSS_PLATFORM_KEYRING.md  GIT_WORKFLOWS.md  IMPLEMENTATION_STATUS.md  MEMORY.md  PHASE_5_SUMMARY.md  README.md  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
python-sidecar/: pyproject.toml
python-sidecar/chamber/: __init__.py  logging_config.py  main.py
python-sidecar/chamber/graph/: __init__.py  chamber_graph.py
python-sidecar/chamber/models/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  xai.py
python-sidecar/chamber/server/: __init__.py  app.py  routes.py  websocket.py
python-sidecar/chamber/state/: __init__.py  chamber_state.py  checkpointing.py
python-sidecar/chamber/tools/: __init__.py  base.py  calculator.py  file_ops.py  web_search.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.claude/: ralph-loop.local.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/commands/: auth.rs  config.rs  migration.rs  mod.rs  session.rs  sidecar.rs  workspace.rs
src-tauri/src/models/: auth.rs  config.rs  message.rs  mod.rs  session.rs
src-tauri/src/services/: config_manager.rs  credential_manager.rs  mod.rs  sidecar_manager.rs  workspace_manager.rs
src-tauri/src/utils/: paths.rs
src-tauri/tests/: oauth_integration.rs
src/lib/components/auth/: OAuthModal.svelte
src/lib/components/chat/: ChatInterface.svelte  MessageBubble.svelte  ReasoningStep.svelte  ToolApprovalRequest.svelte  ToolExecution.svelte
src/lib/components/layout/: Header.svelte  Sidebar.svelte
src/lib/components/ui/: Button.svelte  Card.svelte  Dialog.svelte  Input.svelte  Textarea.svelte  index.ts
src/lib/db/: schema.ts
src/lib/services/: auth.ts  indexeddb.ts  session-manager.ts  tauri.ts
src/lib/stores/: chat.ts  config.ts  credentials.ts  session.ts  theme.ts  ui.ts
src/lib/types/: chamber.ts  config.ts  llm.ts  message.ts  session.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/session/[id]/: +page.svelte
src/routes/sessions/: +page.svelte
src/routes/settings/: +page.svelte
workspace/config/: chamber-config.yaml
