[package]
name = "chamber"
version = "0.1.0"
description = "Multi-Model AI Application"
authors = ["Chamber Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
thiserror = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
directories = "6.0.0"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native-sync-persistent"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
open = "5"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration"
path = "tests/oauth_integration.rs"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
